Updates to remove functionality pertaining to entity types and entity classes